--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -1,10 +1,23 @@
-﻿body {
+body {
+    padding-top: 50px;
+    padding-bottom: 20px;
     background-color: #424040;
     user-select: none;
     -khtml-user-select: none;
     -o-user-select: none;
     -moz-user-select: -moz-none;
     -webkit-user-select: none;
+}
+
+.body-content {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+@media screen and (max-width: 767px) {
+    .carousel-caption {
+        display: none;
+    }
 }
 
 #container {
@@ -17,6 +30,7 @@ header {
     font-family: 'Agency FB';
     font-size: 150px;
     margin-top: 15px;
+    margin-bottom: 100px;
 }
 
 .box {
