--- a/Pages/Welcome.cshtml
+++ b/Pages/Welcome.cshtml
@@ -13,7 +13,7 @@
         $('body').fadeIn(1000);
     </script>
     <center>
-        <h2>Welcome @Model.Username</h2>
+        <h2 style="color: greenyellow;">Welcome @Model.Username</h2>
         <a asp-page="Index" asp-page-handler="Logout">Logout</a>
     </center>
 </body>
