--- a/Pages/Index.cshtml
+++ b/Pages/Index.cshtml
@@ -12,6 +12,24 @@
 <link rel="shortcut icon" type="image/png" href="~/favicon.ico" />
 <link rel="stylesheet" type="text/css" href="~/css/site.css" />
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+<style>
+    a {
+        color: #101010;
+    }
+    a:link {
+        text-decoration: none;
+    }
+    a:hover {
+        text-decoration: none;
+        color: #212121;
+    }
+    a:visited {
+        text-decoration: none;
+    }
+    a:active {
+        text-decoration: none;
+    }
+</style>
 <body style="display: none;">
     <form method="post" asp-page="Index">
         <script>
