--- a/Pages/Register.cshtml
+++ b/Pages/Register.cshtml
@@ -31,7 +31,7 @@
     }
 </style>
 <body style="display: none;">
-    <form method="post" asp-page="Index">
+    <form method="post" asp-page="Register">
         <script>$('body').fadeIn(1000);</script>
         <center>
             <div id="container">
@@ -39,6 +39,7 @@
                     <div>Register panel</div>
                 </header>
                 <content>
+                    <div class="box col-sm-1" style="color: green;">@Model.Message</div>
                     <br />
                     <br />
                     <div class="text">Username </div>
